cabal-version:   3.0
name:            sparse-set
version:         0.1.0
license:         BSD-3-Clause
license-file:    LICENSE
maintainer:      matt@hunzinger.me
author:          Matt Hunzinger
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:  Data.SparseSet
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4,
        deepseq >=1,
        vector >=0.12,
        sparse-vector

executable sparse-set
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4,
        sparse-set

test-suite sparse-set-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4,
        sparse-set

benchmark sparse-set-bench
    type:             exitcode-stdio-1.0
    main-is:          Bench.hs
    hs-source-dirs:   bench
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.2 && <5,
        sparse-set,
        criterion >=1,
        deepseq >=1
