cabal-version:   3.0
name:            sparse-set
version:         0.4.0
license:         BSD-3-Clause
license-file:    LICENSE
maintainer:      matt@hunzinger.me
author:          Matt Hunzinger
synopsis:        Sparse set data structure
description:
    A sparse set is a data structure that allows for efficient
    insertion, deletion, and membership testing of elements in a set.

build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        Data.SparseSet
        Data.SparseSet.Strict
        Data.SparseSet.Strict.Mutable
        Data.SparseSet.Mutable
        Data.SparseSet.Unboxed
        Data.SparseSet.Unboxed.Mutable

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        deepseq >=1,
        vector >=0.12,
        sparse-vector >=0.4

executable sparse-set
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        sparse-set

test-suite sparse-set-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        sparse-set

benchmark sparse-set-bench
    type:             exitcode-stdio-1.0
    main-is:          Bench.hs
    hs-source-dirs:   bench
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5.2 && <5,
        sparse-set,
        criterion >=1,
        deepseq >=1,
        vector >=0.12
